# ninjatrader-8

./: BACKTESTING_USAGE.md  CLAUDE.md  DUPLICATE_ENTRY_FIX.md  GITHUB_ACTIONS_SETUP.md  INTEGRATION_SUMMARY.md  README.md  RELEASE_WORKFLOW.md  TAKE_PROFIT_STOP_LOSS.md  WINDOWS_BUILD_GUIDE.md
rnn-server/: ARCHIVED_FILES.md  BACKTESTING_INTEGRATION.md  CONTRACT_CONFIGURATION_UPDATE.md  CONTRACT_SUPPORT.md  DEVIATION_FEATURES.md  FEATURES.md  INDICATOR_REMOVAL_PLAN.md  MODEL_NOT_TRAINED_FIX.md  MTF_FILTER_FIX.md  MULTI_TIMEFRAME_SOLUTION.md  NUMPY_SERIALIZATION_FIX.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE_2_COMPLETE.md  PRICE_ACTION_MIGRATION_SUMMARY.md  QUICKSTART_MNQ.md  RNN_SERVER_DOCUMENTATION.md  SPEED_FIX_SUMMARY.md  STRICT_TREND_FILTER_APPLIED.md  TIGHTER_STOPS_APPLIED.md  TRADING_DIAGNOSTIC.md  adaptive_risk_management.py  advanced_loss_functions.py  advanced_preprocessor.py  backintime_rnn_adapter.py  backtester.py  backtesting_framework.py.bak  build_executable.bat  build_executable.sh  check_data_status.py  check_model_status.py  cleanup_legacy_files.sh  confidence_calibration.py  confidence_calibration_advanced.py  confidence_scoring.py  config.py  contract_specs.py  counter_trend_config.py  curriculum_learning.py  data_augmentation.py  data_loaders.py  (+49 more)
rnn-server/_legacy_backup_20251022_081400/: train_phase3.py
rnn-server/_legacy_backup_20251022_081744/: deploy_improvements.py
rnn-server/_legacy_backup_20251022_081805/: deploy_round2_improvements.py
rnn-server/_legacy_backup_manual_20251022_081930/: adaptive_retraining.py  advanced_augmentation.py  (+7 more)
(+180 files in other folders)
